superposition and better notation

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -31,7 +31,7 @@ The Normal Dynamic Linear Model (DLM) is covered  [@prado2023time pp. 117-144]
 
 :::{.callout-note collapse="true"}
 
-## Learning Objectives {.unumbered}
+## Learning Objectives {.unnumbered}
 
 - [x] Use R for analysis and forecasting of time series using NDLM (case of known observational and system variances) [\#](#m3g1)
 - [x] Derive the equations to obtain posterior inference and forecasting in the NDLM with known observational and system variances, including the filtering, smoothing and forecasting equations [\#](#m3g2)
@@ -107,7 +107,7 @@ In this module, [we will motivate and develop a class of models suitable for for
 Let's begin with a very simple model that has no temporal structure, just a mean value with some variation that is: 
 
 $$
-y_t = \mu + v_t \qquad v_t \overset{\text{iid}}{\sim} N(0, \nu) \qquad  \text{(white noise model)}
+y_t = \mu + v_t \qquad v_t \overset{\text{iid}}{\sim}  \mathcal{N}(0, \nu) \qquad  \text{(white noise model)}
 $$ {#eq-white-noise-model}
 
 where:
@@ -154,8 +154,8 @@ putting this together we get:
 
 $$
 \begin{aligned}
-y_t &= \mu_t + \nu_t  &\nu_t &\overset{\text{iid}}{\sim} N(0, V)  & \text{(Observation eq.)} \\
-\mu_t &= \mu_{t-1} + \omega_t  &\omega_t &\overset{\text{iid}}{\sim} N(0, W) & \text{(System/evolution eq.)}
+y_t &= \mu_t + \nu_t & \nu_t & \overset{\text{iid}}{\sim}  \mathcal{N}(0, V)  & \text{(Observation eq.)} \\
+\mu_t &= \mu_{t-1} + \omega_t  & \omega_t & \overset{\text{iid}}{\sim}  \mathcal{N}(0, W) & \text{(System/evolution eq.)}
 \end{aligned}
 $$ {#eq-random-walk-model-hierarchical}
 
@@ -180,8 +180,8 @@ The general class of dynamic linear models can be written as follows:
 We are going to have two equations. One is the so-called observation equation that relates the observations to the parameters in the model, and the notation we are going to use is as follows.
 
 $$\begin{aligned}
-y_t &= \vec{F}_t' \vec{\theta}_t   + \nu_t && \nu_t \overset{\text{iid}}{\sim} N(0, V_t) && \text{(obs)} \\
-\vec{\theta}_t &= G_t \vec{\theta}_{t-1} + \vec{\omega}_t && \vec{\omega}_t \overset{\text{iid}}{\sim} N(0, W_t) && \text{(system)}
+y_t &= \vec{F}_t' \vec{\theta}_t   + \nu_t && \nu_t \overset{\text{iid}}{\sim}  \mathcal{N}(0, V_t) && \text{(obs)} \\
+\vec{\theta}_t &= G_t \vec{\theta}_{t-1} + \vec{\omega}_t && \vec{\omega}_t \overset{\text{iid}}{\sim}  \mathcal{N}(0, W_t) && \text{(system)}
 \end{aligned}
 $$ {#eq-NDLM-general-form}
 
@@ -338,8 +338,8 @@ A first order polynomial is of the form $Ax+B$ where A is the slope and B is the
 
 $$
 \begin{aligned}
-y_t &= \theta_t + \nu_t, \qquad & \nu_t & \overset{\text{iid}}{\sim} N(0, V_t) \\
-\theta_t &= \theta_{t-1} + \omega_t, \qquad & \omega_t & \overset{\text{iid}}{\sim} N(0, W_t) \\
+y_t &= \theta_t + \nu_t, \qquad & \nu_t & \overset{\text{iid}}{\sim}  \mathcal{N}(0, V_t) \\
+\theta_t &= \theta_{t-1} + \omega_t, \qquad & \omega_t & \overset{\text{iid}}{\sim}  \mathcal{N}(0, W_t) \\
 &\{1,1,v_t,W_t\} && \text{(short form)}\\
 f_t(h) &= \mathbb{E}[\theta_t \mid \mathcal{D}_t] && \text{(forecast fn)}\\
 \end{aligned} 
@@ -382,12 +382,12 @@ Now we want to create a model in which captures things that has a linear trend e
 
 So we have again something that looks like in my observation equation. 
 I'm going to have, 
-I'm going to call it say $\theta_{t,1} \sim Normal(v_t)$, and then I'm going to have say $\theta_{t,1}$ is going to be of the form to $\theta_{t-1,1}$ and there is another component here. The other component enters this equation plus let's call this $\theta_{t-1,2}$. And then I have finally also I need an evolution for the second component of the process which is going to be again having a random walk type of behavior.
+I'm going to call it say $\theta_{t,1} \sim  \mathcal{N}(v_t)$, and then I'm going to have say $\theta_{t,1}$ is going to be of the form to $\theta_{t-1,1}$ and there is another component here. The other component enters this equation plus let's call this $\theta_{t-1,2}$. And then I have finally also I need an evolution for the second component of the process which is going to be again having a random walk type of behavior.
 
 $$\begin{aligned}
-  y_t &= \theta_{t,1} + \nu_t \quad &\nu_t &\overset{\text{iid}}{\sim} N(0, v_t) \\
-  \theta_{t,1} &= \theta_{t-1,1} + \theta_{t-1,2} + \omega_{t,1} \qquad &\omega_{t,1} &\overset{\text{iid}}{\sim} N(0, w_{t,11}) \\
-  \theta_{t,2} &= \theta_{t-1,2} + \omega_{t,2} \qquad &\omega_{t,2} &\overset{\text{iid}}{\sim} N(0, w_{t,22})
+  y_t &= \theta_{t,1} + \nu_t \quad &\nu_t &\overset{\text{iid}}{\sim}  \mathcal{N}(0, v_t) \\
+  \theta_{t,1} &= \theta_{t-1,1} + \theta_{t-1,2} + \omega_{t,1} \qquad &\omega_{t,1} &\overset{\text{iid}}{\sim}  \mathcal{N}(0, w_{t,11}) \\
+  \theta_{t,2} &= \theta_{t-1,2} + \omega_{t,2} \qquad &\omega_{t,2} &\overset{\text{iid}}{\sim}  \mathcal{N}(0, w_{t,22})
 \end{aligned}
 $$ {#eq-NDLM-2-order-polynomial-model}
 
@@ -412,7 +412,7 @@ $$
 First we collect the two variances for the evolution two components into the vector $\utilde{w}_t$ and then assume that this $w_t$ is Normal. Now this is a bi-variate normal.
 
 $$
-\utilde{\omega}_t = (\omega_{t,1},\omega_{t,2})' \qquad \utilde{\omega}_t \sim N(0,W_t)
+\utilde{\omega}_t = (\omega_{t,1},\omega_{t,2})' \qquad \utilde{\omega}_t \sim  \mathcal{N}(0,W_t)
 $$
 
 So what would be my $F$ and my $G$ in this model? So again my theta vector has two components, thus my $G$, so my $F$ is going to be a two dimensional. We can write down $F$ transposed as the only component that appears at this level is the first component of the vector. 
@@ -509,10 +509,9 @@ $$ {#eq-triangular-form-dynamics}
 
 And in this type of model, the forecast function is going to have order $p-1$. So the parameter vector is going to have dimension $p$. So you're going to have $\theta_t =  \theta_{t1:p}$.
 
-The observation opertaor $F$ is just a constant and if we write it as a row vector we get $F'$ as a p-dimensional vector with the one in the first entry and zeros everywhere else.
+The observation operator $F$ is just a constant and if we write it as a row vector we get $F'$ as a p-dimensional vector with the one in the first entry and zeros everywhere else.
 
-The dynamics  matrix $G$ may be written using either a J
-jordan form either @eq-Jordan-form-dynamics or as a triangular form @eq-triangular-form-dynamics. These result in differnt parameterization of this model and we  will talk a little bit about this. 
+The dynamics  matrix $G$ may be written using either a $J$ Jordan form @eq-Jordan-form-dynamics or as a triangular form @eq-triangular-form-dynamics. These result in different parameterization of this model and we  will talk a little bit about this. 
 
 In the @eq-Jordan-form-dynamics we have a matrix with ones on the diagonal and the super diagonal, the matrix is needs to be $p \times p$ i.e. with dimension $p$ to be compatible with the dimension of the hidden state vector $\theta$. So this matrix $G$ is what we call a Jordan block of dimension p of 1. So here 1 is the number that appears in the diagonal. And then I have a p $I_p$ matrix, I have ones in the upper diagonal part. So this is the form of the model, so once again I have the $F$ the $G$, and the $W_t$. I have my model. 
 
@@ -546,8 +545,8 @@ Note that the third order polynomial model is covered in
 
 $$
 \begin{aligned}
-y_t &= \mu_t + \nu_t, \qquad & \nu_t &\sim N(0, v_t) \\
-\mu_t &= \mu_{t-1} + \omega_t, \qquad & \omega_t &\sim N(0, w_t)
+y_t &= \mu_t + \nu_t, \qquad & \nu_t &\sim  \mathcal{N}(0, v_t) \\
+\mu_t &= \mu_{t-1} + \omega_t, \qquad & \omega_t &\sim  \mathcal{N}(0, w_t)
 \end{aligned}
 $$
 
@@ -574,9 +573,9 @@ $$
 #### Second-Order Polynomial
 
 $$\begin{aligned}
-  y_t &= \theta_{t,1} + \nu_t, \quad &\nu_t &\sim N(0, v_t) \\
-  \theta_{t,1} &= \theta_{t-1,1} + \theta_{t-1,2} + \omega_{t,1}, \qquad &\omega_{t,1} &\sim N(0, w_{t,11}) \\
-  \theta_{t,2} &= \theta_{t-1,2} + \omega_{t,2}, \qquad &\omega_{t,2} &\sim N(0, w_{t,22}),
+  y_t &= \theta_{t,1} + \nu_t, \quad &\nu_t &\sim  \mathcal{N}(0, v_t) \\
+  \theta_{t,1} &= \theta_{t-1,1} + \theta_{t-1,2} + \omega_{t,1}, \qquad &\omega_{t,1} &\sim  \mathcal{N}(0, w_{t,11}) \\
+  \theta_{t,2} &= \theta_{t-1,2} + \omega_{t,2}, \qquad &\omega_{t,2} &\sim  \mathcal{N}(0, w_{t,22}),
 \end{aligned}
 $$
 
@@ -789,8 +788,8 @@ $$
 f_t(h) = k_{t,0} + k_{t,1} x_{t+h,1} + \dots + k_{t,M} x_{t+h,M}.
 $$ {#eq-forecast-function-general-dynamic-regression}
 
-A particular case of dynamic regressions is the case of **time-varying autoregressions (TVAR)** with
-[time-varying autoregressions (TVAR)]{.column-margin width="250px" group="slides"}
+A particular case of dynamic regressions is the case of **time-varying autoregressive (TVAR)** with
+[time-varying autoregressive (TVAR)]{.column-margin width="250px" group="slides"}
 
 $$
 \begin{aligned}
@@ -803,55 +802,46 @@ $$
 
 ![The superposition principle](images/m3_0031.png){.column-margin width="250px" group="slides"}
 
-> [We can use the superposition principle to build models that have different kinds of components. The main idea is to think about what is the general structure we want for the forecast function and then isolate the different components of the forecast function and think about the classes of dynamic linear models that are represented in each of those components.]{.mark} Each of those components has a class and then we can build the general dynamic linear model with all those pieces together using this principle.
+[We can use the superposition principle to build models that have different kinds of components. The main idea is to think about what is the general structure we want for the forecast function and then isolate the different components of the forecast function and think about the classes of dynamic linear models that are represented in each of those components.]{.mark} Each of those components has a class and then we can build the general dynamic linear model with all those pieces together using this principle.
 
-> I will illustrate how to do that with an example:
-> Let's say that you want to create a model here with a forecast function that has a linear trend component. Let's say we have a linear function as a function of the number of steps ahead that you want to consider. Then suppose you also have a covariate here that you want to include in your model as a regression component.
+We will illustrate how to do that with an example:
+Let's say that we want to create a model here with a forecast function that has a linear trend component. Let's say we have a linear function as a function of the number of steps ahead that you want to consider. Then suppose you also have a covariate here that you want to include in your model as a regression component.
 $$
-f_t(h) = \underbrace{(k_{t,0} + k_{t,1}h)}_{\text{linear trend component}} + \underbrace{(k_{t,2}x_{t+h})}_{\text{regression component}}
+f_t(h) = \underbrace{(k_{t,0} + k_{t,1}\; h)}_{\text{linear trend component}} + \underbrace{(k_{t,2}\; x_{t+h})}_{\text{regression component}}
 $$ {#eq-superposition-principle-example}
 
 where:
 
-- $f_t(h)$ is the forecast function.
-- $k_{t,0}$, $k_{t,1}$ and $k_{t,2}$ are constants that depend on time $t$.
-- $x_{t+h}$ is the covariate.
+- $f_t(h)$ is our forecast function.
+- $k_{t,0}$, $k_{t,1}$ and $k_{t,2}$ are just constants (that we index using time $t$ and a second subscript).
+- $x_{t+h}$ is a time dependent regression covariate.
 
- Let's say we have a $K_{t2}$ and then we have $x_{t+h}$, this is my covariate. Again, the k's here are just constants, as of constants in terms of h, they are dependent on time. This is the general structure we want to have for the forecast function. 
- 
- > [When I look at the forecast function, I can isolate and separate these two components. I have a component that looks like a linear trend and then I have a component that is a regression component. Each of this can be set in terms of two forecast functions]{.mark}. I'm going to call the forecast function $f_1t$ h, this is just the first piece.
+When we look at the forecast function, we can isolate a linear trend and a regression components as indicated.
+Each of these can be set in terms of two forecast functions]{.mark}. I'm going to call the forecast function $f_{1,t}(h)$, this is just the first piece.
 
-
-$$
-f_t(h) = f_{1,t}(h) + f_{2,t}(h)
-$$
-
-where:
 
 $$
-f_{1,t}(h) = k_{t,0} + k_{t,1} \qquad \text{(linear trend component)}
-$$ {#eq-superposition-principle-example-linear-trend-component}
+\begin{aligned}
+f_t(h) &= f_{1,t}(h) + f_{2,t}(h) \\
+f_{1,t}(h) &= k_{t,0} + k_{t,1} & \text{(linear trend component)} \\
+f_{2,t}(h) &= k_{t,2}x_{t+h} & \text{(regression component)}
+\end{aligned}
+$$ {#eq-superposition-breaking-it-down}
 
-and
+We know how to represent forecast function $f_{1,t}$ and $f_{2,t}$ in terms of dynamic linear models.
+
+For the linear trend component, $f_{1,t}(h)$ , we have a 2-dimensional state vector, $\theta_t = (\theta_{t,1}, \theta_{t,2})'$, which yields the following DLM shortform:
 
 $$
-f_{2,t}(h) = k_{t,2}x_{t+h} \qquad \text{(regression component)}
-$$ {#eq-superposition-principle-example-regression-component}
+\{F_1, G_1, \cdot, \cdot\}  \qquad \text{(short notation)}
+$$ {#eq-superposition-linear-trend-short-form}
 
->Then I have my second piece here. I'm going to call it $f_{2t}$, is just this piece here with the regression component. We know how to represent this forecast function in terms of a dynamic linear model. 
-
-For the linear trend component, we have a 2-dimensional state vector, $\theta_t = (\theta_{t,1}, \theta_{t,2})'$, with
-
-for the linear trend component $f_{1,t}(h)$ we have the following DLM representation:
-
-$$\{F_1, G_1, \cdot, \cdot\}  \qquad \text{(short notation)}
-$$
-
-where we don't explicitly specify the observational and system variances, V and W - The important bit are F,and G. The forecast function is given by:
+- Where we don't explicitly specify the observational and system variances, $V$ and $W$ 
+- The important bit are $F$ and $G$. The forecast function is given by:
 
 $$
 F_{1} = E_2 = (1, 0)'
-$$
+$$ {#eq-superposition-F1}
 
 $$
 G_{1} =
@@ -859,29 +849,53 @@ G_{1} =
 1 & 1 \\
 0 & 1
 \end{pmatrix}
-$$
+$$ {#eq-superposition-G1}
 
 for the regression component $f_{2,t}(h)$ we have the following DLM representation:
 
-$$\{F_2,t, G_2, \cdot, \cdot\}  \qquad \text{(short notation)}
 $$
+\{F_2,t, G_2, \cdot, \cdot\}  \qquad \text{(short notation)}
+$$ {#eq-superposition-regression-short-form}
 
-where 
+where we have $F_{2t}$ is $X_t$ and my $G$ is simply going to be 1. This is a one-dimensional vector in terms of the state parameter vector. 
 
 $$
 F_{2,t} = x_{t+h}
-$$
+$$ {#eq-superposition-F2}
 
 $$
 G_{2} = 1
+$$ {#eq-superposition-G2}
+
+
+Once we have these, we can assemble them into our final model. $\{F_t, G, \cdot, \cdot\}$
+
+We care more about $F$, $G$, and less about the observational variance and some covariance also for the system where the
+
+F is going to be an F that has, you just concatenate the two Fs. You're going to get 1, 0 and then you're going to put the next component here.
+Again, this one is dependent on time because this component is time dependent and 
+
+The model with forecast function $f_t(h)$ above is a model with a 3-dimensional state vector with 
+
+$$
+F_t = (F_1', F_{2,t})' = (1, 0, x_t)'
+$$ 
+
+Then the G, you can create it just taking a block diagonal structure by concatenating $G_1$ and $G_2$. though formally there must be a better term for this operation.
+
+$$
+G = \text{blockdiag}[G_1, G_2] = 
+\begin{pmatrix}
+1 & 1 & 0 \\
+0 & 1 & 0 \\
+0 & 0 & 1
+\end{pmatrix}.
 $$
 
 
-> I can write down a model that has an F, G, and some V, and some W that I'm going to just leave here and not specify them explicitly because the important components for the structure of the model are the F and the G. If you'll recall the F in the case of a forecast function with a linear trend like this, is just my E_2 vector, which is a two-dimensional vector. The first entry is one, and the second one is a zero. Then the G in this case is just this upper triangular matrix that has 1, 1 in the first row and 0, 1 in the second one. Remember, in this case we have a two-dimensional state vector where one of the components in the vector is telling me information about the level of the time series, the other component is telling me about the rate of change in that level. This is a representation that corresponds to this forecast function. For this other forecast function, we have a single covariate, it's just a regression and I can represent these in terms of an F_2, G_2, and then some observational variance and some system variance here in the case of a single covariate and this one depends on t. We have F_2t is X_t and my G here is simply going to be one. This is a one-dimensional vector in terms of the state parameter vector. We have a single state vector and it's just going to tell me about the changes, the coefficient that goes with the X_t covariate. Once I have these, I can create my final model and I'm going to just say that my final model is F, G, and then I have some observational variance and some covariance also for the system where the F is going to be an F that has, you just concatenate the two Fs. You're going to get 1, 0 and then you're going to put the next component here. Again, this one is dependent on time because this component is time dependent and then the G, you can create it just taking a block diagonal structure,
+This gives us the full $G$ dynamics matrix for the model. A model with this $F_t$ and this $G$ that is constant over time will give us this particular forecast function @eq-superposition-principle-example we started with.
 
-> $G_1$ and $G_2$. You just put together, the first one is 1, 1, 0, 1 and then I concatenate this one as a block diagonal. This should be one.
-
-> This gives me the full G function for the model. Now a model with this $F_t$ and this $G$ that is constant over time will give me this particular forecast function. I'm using the superposition principle to build this model. If you want additional components, we will learn how to incorporate seasonal components, regression components, trend components. You can build a fairly sophisticated model with different structures into this particular model using the superposition principle.
+We used the superposition principle to build this model. If we need additional components, we will learn how to incorporate seasonal components, regression components, trend components. One  can build a fairly sophisticated model with different structures into this particular model using the superposition principle.
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
@@ -931,6 +945,8 @@ G_t = \text{blockdiag}[G_1, G_2] =
 $$
 
 ### General Case
+
+The general case wasn't covered in the video and we didn't have a proper statement of the superposition principle.
 
 Assume that you have a time series process $y_t$ with a forecast function
 
@@ -987,10 +1003,10 @@ Sean Law - STUMPY: Modern Time Series Analysis with Matrix Profiles
 
 ::: {.callout-note collapse='true'}
 
-### Reality check {.unumbered}
+### Reality check {.unnumbered}
 
 
-The next bit tells us what we know and then what we want to use baysian inference for (i.e. filtering smoothing, of the parameters $\theta_t$ given the data and forecasting $y_t$ based on that)
+The next bit tells us what we know and then what we want to use bayesian inference for (i.e. filtering smoothing, of the parameters $\theta_t$ given the data and forecasting $y_t$ based on that)
 
 I kind of got annoyed that we know everything I want to infer $F,G,V,W$ and Priors $M,C$. But that not the process with time series analysis. 
 
@@ -1007,8 +1023,8 @@ So recall we are working with a model that looks like this.
 
 $$
 \begin{aligned}
-y_t &= F_t' \theta_t + \nu_t, \quad \nu_t \sim N(0, v_t), \\
-\theta_t &= G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim N(0, W_t), 
+y_t &= F_t' \theta_t + \nu_t, & \nu_t \sim  \mathcal{N}(0, v_t), \\
+\theta_t &= G_t \theta_{t-1} + \omega_t, & \omega_t \sim  \mathcal{N}(0, W_t), 
 \end{aligned}
 $$ {#eq-generic-NDLM}
 
@@ -1023,17 +1039,16 @@ In a Bayesian setting, you have to set *a prior distribution*. [We will work wit
 
 In this case we have to begin with a distribution at time zero for $\theta_0$. So before we have seen any data at all, I have this prior distribution. 
 
-We also assume a prior distribution of the form 
+We also assume a prior distribution of the form:
 
 $$
-(\theta_0 \mid D_0) \sim N(m_0, C_0)
+(\theta_0 \mid D_0) \sim  \mathcal{N}(m_0, C_0)
 $$ {#eq-normal-prior-for-the-parameters-given-the-data}
 
-Here $\mathcal{D}_0$ stands for the information that I have before collecting any data. And we are assuming $\theta_0$ follows a normal distribution with $m_0$ mean and variance covariance matrix $C_0$. So these are also specified when you're working with this model. 
-So we assume that this $m_0$ and $C_0$ is known.
+Here $\mathcal{D}_0$ stands for the information that I have before collecting any data. And we are assuming $\theta_0$ follows a normal distribution with $m_0$ mean and variance covariance matrix $C_0$. So these are also specified when you're working with this model. We assume that  $m_0$ and $C_0$ are known.
 
 $$
-(\theta_{t-1} \mid D_{t-1}) \sim N(m_{t-1}, C_{t-1}).
+(\theta_{t} \mid \mathcal{D}_{t-1}) \sim  \mathcal{N}(m_{t-1}, C_{t-1}).
 $$ {#eq-filtering-assumption-1}
 
 We assume that this the filtering distribution follows this normal distribution based on @eq-normal-prior-for-the-parameters-given-the-data being conjugate of the normal and the linearity of @eq-generic-NDLM which aligns with maintaining the normal form during the linear updates taking place at each time step.
@@ -1043,7 +1058,7 @@ Then, we can obtain the following distributions:
 1. Prior at Time $t$
 
 $$
-(\theta_t \mid D_{t-1}) \sim N(a_t, R_t),
+(\theta_t \mid D_{t-1}) \sim  \mathcal{N}(a_t, R_t),
 $$
 
 with
@@ -1055,7 +1070,7 @@ $$
 2. One-Step Forecast
 
 $$
-(y_t \mid D_{t-1}) \sim N(f_t, q_t),
+(y_t \mid D_{t-1}) \sim  \mathcal{N}(f_t, q_t),
 $$
 
 with
@@ -1064,7 +1079,7 @@ $$
 f_t = F_t' a_t, \quad q_t = F_t' R_t F_t + v_t.
 $$
 
-3. Posterior at Time $t:$ $(\theta_t \mid \mathcal{D}_t) \sim N(m_t, C_t)$ with
+3. Posterior at Time $t:$ $(\theta_t \mid \mathcal{D}_t) \sim  \mathcal{N}(m_t, C_t)$ with
 
 $$
 \begin{aligned}
@@ -1097,19 +1112,19 @@ Consider an NDLM given by:
 
 $$
 \begin{aligned}
-y_t &= F_t' \theta_t + \nu_t, \quad \nu_t \sim N(0, v_t), \\
-\theta_t &= G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim N(0, W_t), 
+y_t &= F_t' \theta_t + \nu_t, \quad \nu_t \sim  \mathcal{N}(0, v_t), \\
+\theta_t &= G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim  \mathcal{N}(0, W_t), 
 \end{aligned}
 $$ {#eq-generic-NDLM}
 
-with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid D_0) \sim N(m_0, C_0)$, with $m_0$, $C_0$ known.
+with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid D_0) \sim  \mathcal{N}(m_0, C_0)$, with $m_0$, $C_0$ known.
 
 #### Filtering
 
 We are interested in finding $p(\theta_t \mid D_t)$ for all $t$. Assume that the posterior at $t-1$ is such that:
 
 $$
-(\theta_{t-1} \mid D_{t-1}) \sim N(m_{t-1}, C_{t-1}).
+(\theta_{t-1} \mid D_{t-1}) \sim  \mathcal{N}(m_{t-1}, C_{t-1}).
 $$ {#eq-filtering}
 
 Then, we can obtain the following:
@@ -1117,7 +1132,7 @@ Then, we can obtain the following:
 1. Prior at Time $t$
 
 $$
-(\theta_t \mid D_{t-1}) \sim N(a_t, R_t),
+(\theta_t \mid D_{t-1}) \sim  \mathcal{N}(a_t, R_t),
 $$
 
 with
@@ -1129,7 +1144,7 @@ $$
 2. One-Step Forecast
 
 $$
-(y_t \mid D_{t-1}) \sim N(f_t, q_t),
+(y_t \mid D_{t-1}) \sim  \mathcal{N}(f_t, q_t),
 $$
 
 with
@@ -1138,7 +1153,7 @@ $$
 f_t = F_t' a_t, \quad q_t = F_t' R_t F_t + v_t.
 $$
 
-3. Posterior at Time $t:$ $(\theta_t \mid \mathcal{D}_t) \sim N(m_t, C_t)$ with
+3. Posterior at Time $t: (\theta_t \mid \mathcal{D}_t) \sim  \mathcal{N}(m_t, C_t)$ with
 
 $$
 \begin{aligned}
@@ -1418,21 +1433,21 @@ lines(index,LakeHuron,lty=2)
 Consider the NDLM given by:
 
 $$
-y_t = F_t' \theta_t + \nu_t, \quad \nu_t \sim N(0, v_t), \tag{1}
+y_t = F_t' \theta_t + \nu_t, \quad \nu_t \sim  \mathcal{N}(0, v_t), \tag{1}
 $$
 
 $$
-\theta_t = G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim N(0, W_t), \tag{2}
+\theta_t = G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim  \mathcal{N}(0, W_t), \tag{2}
 $$
 
-with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid D_0) \sim N(m_0, C_0)$, with $m_0$ and $C_0$ known.
+with $F_t$, $G_t$, $v_t$, and $W_t$ known. We also assume a prior distribution of the form $(\theta_0 \mid D_0) \sim  \mathcal{N}(m_0, C_0)$, with $m_0$ and $C_0$ known.
 
 #### Smoothing
 
 For $t < T$, we have that:
 
 $$
-(\theta_t \mid D_T) \sim N(a_T(t - T), R_T(t - T)),
+(\theta_t \mid D_T) \sim  \mathcal{N}(a_T(t - T), R_T(t - T)),
 $$
 
 where
@@ -1452,11 +1467,11 @@ for $t = (T - 1), (T - 2), \dots, 0$, with $B_t = C_t G_t' R_{t+1}^{-1}$, and $a
 For $h \geq 0$, it is possible to show that:
 
 $$
-(\theta_{t+h} \mid D_t) \sim N(a_t(h), R_t(h)),
+(\theta_{t+h} \mid D_t) \sim  \mathcal{N}(a_t(h), R_t(h)),
 $$
 
 $$
-(y_{t+h} \mid D_t) \sim N(f_t(h), q_t(h)),
+(y_{t+h} \mid D_t) \sim  \mathcal{N}(f_t(h), q_t(h)),
 $$
 
 with
