added reference on TVAR

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -716,10 +716,12 @@ A particular case is of dynamic regressions is the case of time-varying auto-reg
 
 $$
 \begin{aligned}
-y_t &= φ_{t,1}y_{t−1} + φ_{t,2}y_{t−2} + \ldots + φ_{t,p} y_{t−p} + ν_t,\\
-φ_{t,m} &= φ_{t−1,m} + \omega_{t,m,} & m = 1 : p
+y_t &= \varphi_{t,1}y_{t−1} + \varphi_{t,2}y_{t−2} + \ldots + \varphi_{t,p} y_{t−p} + ν_t,\\
+\varphi_{t,m} &= \varphi_{t−1,m} + \omega_{t,m,} & m = 1 : p
 \end{aligned}
 $$ {#eq-tvar}
+
+There is a paper [@prado2000bayesian] on TVAR models that is a good reference for this model.
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
