--- a/references.bib
+++ b/references.bib
@@ -1315,3 +1315,14 @@ note = "Accessed 11/02/16",
   address = {{Boca Raton}},
   isbn = {978-0-367-89436-8},
 }
+
+@article{prado2000bayesian,
+  title={Bayesian time-varying autoregressions: Theory, methods and applications},
+  author={Prado, Raquel and Huerta, Gabriel and West, Mike},
+  journal={Resenhas do Instituto de Matem{\'a}tica e Estat{\'\i}stica da Universidade de S{\~a}o Paulo},
+  volume={4},
+  number={4},
+  pages={405--422},
+  year={2000},
+  url={https://www2.stat.duke.edu/~mw/MWextrapubs/Prado2001.pdf},
+}
