--- a/intro.qmd
+++ b/intro.qmd
@@ -1,3 +1,14 @@
+---
+title: "Introduction to Bayesian Statistics"
+---
+
+::: {.callout-note}
+Initially I signed up to two different specializations on Bayesian statistics. 
+My notes cover the UoSCSC specialization 
+This intro covers the
+
+:::
+
 # Introduction
 
 What is covered is:
@@ -20,33 +31,33 @@ With this goal in mind, the content is divided into the following three main sec
 -   Databricks CE - Get familiar with the notebook interface
 -   Databricks CE - Git integration for notebooks
 
-## **Why Inference?**
+## Why Inference?
 
 The purpose of the set of courses is to focus on **Inferential Statistics** as opposed to **Descriptive Statistics**.
 
 All the samples in the group that we are interested in learning about make up a **population**. Populations can be described by **parameters** such as the mean and variance since they represent all of the data. Often, we do not have access to all the data in our population and have to sample from the population. The metrics of mean and variance computed from these samples are not called parameters but **statistics** of the data.
 
-### **Descriptive Statistics**
+### Descriptive Statistics
 
 This is used to summarize the data so that we have a quantitative way to understand data. This allows to understand and visualize data qualitatively. We can draw conclusions about the nature of the data. Descriptive statistics is applied to a **population** and hence can provide measures such as the mean and variance of the data. They do not allow us to make predictions about data that we have not analyzed.
 
-### **Inferential Statistics**
+### Inferential Statistics
 
 Inferential Statistics allow us to make generalizations about the population from the samples. This process of sampling introduces errors as this is never a perfect representation of the underlying data. The *statistics* thus computed are supposed to be an estimate of the true population parameters. It allows you to form a distribution of the population from the sampled data by accounting for the errors in the sampling, thereby allowing you to make predictions about data that is not yet seen or sampled.
 
-## **How is Inference different from Prediction?**
+## How is Inference different from Prediction?
 
 [Reference](https://statistics.laerd.com/statistical-guides/descriptive-inferential-statistics.php)
 
-### **Prediction**
+### Prediction
 
 If you happen to come from a background in Machine Learning, you are probably used to making predictions. This is exactly what it sounds like, you use a model to make predictions on unseen data. The predictive process involves the following steps
 
 -   Create the model
--   Select the best model using performance metrics such as accuracy, F1 scores on out-of-sample data\\
+-   Select the best model using performance metrics such as accuracy, F1 scores on out-of-sample data
 -   Make predictions on new data
 
-### **Inference**
+### Inference
 
 In Inference, you are trying to model a distribution and understand the process that generates the data. This involves the following steps
 
@@ -62,6 +73,3 @@ In Inference, you are trying to model a distribution and understand the process 
 - [@vanderplas2016python] [ebook](https://jakevdp.github.io/PythonDataScienceHandbook/) [notebooks](https://github.com/jakevdp/PythonDataScienceHandbook)
 - [@bishop2013pattern] [ebook](https://www.microsoft.com/en-us/research/uploads/prod/2006/01/Bishop-Pattern-Recognition-and-Machine-Learning-2006.pdf)  [website](https://www.microsoft.com/en-us/research/people/cmbishop/prml-book/)
 
-```{r}
-1 + 1
-```
